# quantum-metric

./: .gitignore  README.md  SETUP.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  requirements.txt
docs/source/: changelog.md  cli.md  conf.py  index.md  installation.md  python_api.md  quickstart.md  theory.md
docs/source/api/: index.md
docs/source/api/_generated/: quantum_metric.calculator.rst  quantum_metric.cli.rst  quantum_metric.electrons.rst  quantum_metric.io.rst  quantum_metric.metric.rst  quantum_metric.optics.rst  quantum_metric.plotting.rst
docs/source/examples/: ag_fcc.md  index.md
examples/: single_material.py
src/quantum_metric/: __init__.py  calculator.py  cli.py  electrons.py  io.py  kresolved.py  kresolved_plot.py  metric.py  optics.py  plotting.py
tests/: test_basic.py
