[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-metric"
version = "0.1.0"
description = "Compute the quantum metric and related optical quantities from VASP output."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Princeton" }
authors = [
    { name = "Fatmagul Katmer", email = "fk6671@princeton.edu" },
]
keywords = ["vasp", "dft", "quantum-metric", "optical-conductivity", "condensed-matter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "typer>=0.9",
    "rich>=13.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
quantum-metric = "quantum_metric.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/quantum-metric"
Issues = "https://github.com/yourusername/quantum-metric/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
